# pylerplate

./: .gitignore  .pre-commit-config.yaml  Dockerfile  Dockerfile.compile  Dockerfile.runtime  Dockerfile.test  Makefile  Pipfile  pyproject.toml  setup.cfg
.github/workflows/: docker-publish.yml  python-app.yml
api/: main.py  routes.py  views.py
app/: config.py  main.py  routes.py  typehints.py
src/: main.py
tests/: conftest.py  test_main.py
