[tool.black]
target-version = ["py38"]

exclude = '''
/(
    \.git
    htmlcov
    \.mypy_cache
    \.pytest_cache
)/
'''

[tool.poetry]
name = "pylerplate"
version = "0.1.0"
description = ""
authors = ["Dima Doroshev <dima@doroshev.com>"]

[tool.poetry.dependencies]
python = "^3.8"
isort = {version = "^5.6.1", optional = true}
ptipython = {version = "^1.0.1", optional = true}
pre-commit = {version = "^2.7.1", optional = true}
autoflake = {version = "^1.4", optional = true}
fastapi = "^0.61.1"
uvicorn = "^0.12.1"
requests = "^2.24.0"
fastapi-utils = "^0.2.1"
sentry-sdk = "^0.18.0"

[tool.poetry.dev-dependencies]
pytest = "^6.1.1"
pytest-cov = "^2.10.1"
flake8 = "^3.8.4"
mccabe = "^0.6.1"
flake8-bugbear = "^20.1.4"
flake8-builtins = "^1.5.3"
flake8-quotes = "^3.2.0"
flake8-comprehensions = "^3.2.3"
flake8-string-format = "^0.3.0"
flake8-debugger = "^3.2.1"
flake8-eradicate = "^0.4.0"
flake8-bandit = "^2.1.2"
flake8-print = "^3.1.4"
flake8-isort = "^4.0.0"
pep8-naming = "^0.11.1"
mypy = "^0.782"
black = "^20.8b1"

[tool.poetry.extras]
devtools = ["isort", "autoflake", "pre-commit", "ptipython"]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
